@@ -1,5 +1,5 @@
 AUX lmms-0.4.10-unembedfltk.patch 2778 SHA256 233fb78db882fae018d26c421ef543edb3c24062c1198cedb96ce564b1eb2893 SHA512 bfd9ea25852cd6e23150c8f5030f4b4159f006bf3b0a6954c94a7c31c2756ced8b4c58ae43632f0c6ae6a21e1ebebb983dc71b2ddaad29c71fe3b89ac9dc9d42 WHIRLPOOL 862ad00ab7f5f675a35ecb0059fa9b8ceee258f77f44f6f46fc05dac5ddb981c912b73cefb6f50342fc86f8ef1281dd4d9595cc771cda85e0f1601d432d81852
 EBUILD lmms-0.4.9999.ebuild 2078 SHA256 b43140662d52a909e3c956c58c1203f75b99cc5a7a72fa89b1f85c08c40a7e42 SHA512 a3b0a288af7b85fb609cabe419157e4ab23cdd1cce654245665c76277f9caca8cbb67571bc35e394c0e7c504dccf0908d78c6e43f4bb336fdb1452a8a36ea03d WHIRLPOOL 56899936741f2f933a90fe37eab9d56a2f74839a490d53041c5f92a301bc8756aa80f913dbe95966eadf47493bb437e85472db61c648b674857b178eb019c953
-EBUILD lmms-9999-r1.ebuild 1514 SHA256 aa981a654288e33bba5e64168bf9e87eb9be4d89948922b65bef0074721c7cf9 SHA512 a2f1201d7a5f373c21b2746ba484127244c6edf7aa27b928eb76c3353738ccc6828a783f14f8f54089dacd9fb90516a228833e4e967198f2225e24c88fe41a22 WHIRLPOOL 9e937d9a8e4a80eba09aa9b3569823a65a46d82be6c63d5d19bdfdb933ec2baed3ba9a9157481a7c55ae1df921911a721ce58ccb0461c4feb5fd2a0588dd6324
-MISC ChangeLog 1663 SHA256 a56a639c5bf19cafe6a5211e416564a2e0f619bf1bf44fd3abef6f7699af4f8e SHA512 1f79dc66adef69c1416c98c157f56478f33fe3a3f5f6458dd28f9014e063c85b90514b0e239c7cc3c144b56174c6d267701b39a866bd18010b0b77f569e9c1b6 WHIRLPOOL ecec5388f206bc65bdebe94a37c086e6d8ec5b410be491f07bab3a7858808820fa51e1856ee0269d9375c3a90d97ce69a039adc8644f4c2734d35bfa200baa0e
+EBUILD lmms-9999-r1.ebuild 1457 SHA256 0766b8166ada46df91ba027aea80bbb0c542c2e80868fcf6ae1e37a9e070507c SHA512 f9e00668d5653c0afdef83c883c604d1d6766b245fe96a82dbfe104d0147580da328b9fc6adda629e805779d6bb7f412a95c5c13cca4b7f82e3599f9504281ff WHIRLPOOL 36ca1662a28c0bfda87d105c0f11518e92a1237943ab814da468e2b5831e98f94ddf922d869badf6f2b0391bde6cb6b5da832419ee792dc755b872bdb0ac6070
+MISC ChangeLog 1875 SHA256 3b4549129b806155a1c998e1c8b2d587a837609a3a58eb7c4ebedd1bbf1928da SHA512 b0b2dcbc5fb3218390950cf2c5f052cc3eddb4f56e3531168ca2ea5a354ca647d05248025bf321d7667f89ac0d6254cebbd6131759df63799c43b75c6eb696da WHIRLPOOL 1568b0253c300dc50e2d2843a55afd6c8113ea1b6ce7139dde7c665807972b3d394889eecb7d7b53cf890cd187e86b8d751efa8a563d79246b560201b4e0c09b
 MISC metadata.xml 358 SHA256 d2f85efac83d2420f1483593cfda4f3bf0ecd352d035ddab08f1467286ba6608 SHA512 d3e47010b673a04f9e39eb2808d936582bb31098b37a5324898c6a498bf18edacac9cddf610b9d6d550a9f0e542d5e43e259e09c5d88b52623f9d150792115e7 WHIRLPOOL 5e94c98725163bc17aeb041b10993dd7ca850db4afbab791ec7d47c0927fda814d9a1f49797b0e8395b3187b5aa7ea8f942eed86e4b66209bcf2428243896dd0
