@@ -2,6 +2,13 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  06 Sep 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
+  lmms-9999-r1.ebuild:
+  EAPI 5.
+  Some rearranging.
+  Use arrays instead of strings.
+  Updated repo URI (thanks to Miroslav Sulc for the patch).
+
   09 Mar 2013; Dominique Michel <dominique_libre@sourceforge.net>
   lmms-0.4.9999.ebuild; lmms-9999-r1.ebuild: Moved QT depends to dev-qt/*
 
